Version 0.3.0 - released 05//17
=================================
 - Issue #29 - Secure components close
 - Issue #30 - Replace print log to logging
 - **Breaking change**: Issue #39 - Change save method to pluginsmanager (v0.5.0) Autosaver
   - Removed BanksDao -> Using now pluginsmanager Autosaver
   - Removed Database -> Using now pluginsmanager Persistence
   - BanksController, PedalboardController, EffectController, ParamController,
     CurrentController changes your API

Version 0.2.1 - released 04/14/17
=================================
 - 21fdb32 Issue #30 - Fix move pedalboard notification
 - Fix Readme: Pipy render README.rst
 - fbb9908 - Add Licenses in __init__.py files

Version 0.2.0 - released 04/05/17
=================================
 - Initial release