@@ -2,11 +2,16 @@ Version 0.3.0 - released 05//17
 =================================
  - Issue #29 - Secure components close
  - Issue #30 - Replace print log to logging
- - **Breaking change**: Issue #39 - Change save method to pluginsmanager (v0.5.0) Autosaver
+ - **Breaking change**: Issues #39 and #5 - Change save method to pluginsmanager (v0.5.0) Autosaver
    - Removed BanksDao -> Using now pluginsmanager Autosaver
    - Removed Database -> Using now pluginsmanager Persistence
    - BanksController, PedalboardController, EffectController, ParamController,
      CurrentController changes your API
+ - Issue #41 - Allows current pedalboard is None
+ - Issue #40 - If current pedalboard index file is wrong, Application now starts
+   with the current pedalboard = None
+ - Issue #11 - Banks with same name not will be replaced when Application initialize
+ - Issue #17 - Fixes: Remove bank with current pedalboard will be crash (when reload Application)
 
 Version 0.2.1 - released 04/14/17
 =================================
